# simpleOpenCVMatToWayland

./: CMakeLists.txt  main.cpp  wayland-shm.cpp
